[package]
name = "spotify-backup"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
dirs = "5"
form_urlencoded = "1"
http-body-util = "0.1"
hyper = { version = "1.3", features = ["http1", "server"] }
hyper-util = "0.1"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
webbrowser = { version = "1", features = ["hardened", "disable-wsl"] }
